fixed the spacing between each line of the navbar text with display flex, added some margin in between each li

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -344,7 +344,7 @@ footer {
 /* Media Queries */
 
 /* When the screen is less than 600 pixels wide, hide all link except the home link. Shows the hamburger menu icon */
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .nav li:not(:first-child) {
     display: none;
   }
@@ -354,11 +354,13 @@ footer {
 
   .nav {
     padding: 0;
+    height: 60px;
   }
 
   .container ul {
     display: flex;
     justify-content: space-between;
+    height: 60px;
   }
 
   .nav.responsive {
@@ -370,9 +372,11 @@ footer {
   }
 
   .nav.responsive li a.btn-mini {
+    display: flex;
     font-size: 0.5rem;
-    padding: 0 4px;
-    width: 1.5rem;
+    margin: 0 10px;
+    padding: 0;
+    text-align: center;
   }
 
   body {
@@ -385,7 +389,7 @@ footer {
 
   .emotion-container > img {
     margin: 30px 0 0 0;
-    max-width: 32rem;
+    max-width: 90%;
     max-height: 16rem;
   }
 
@@ -435,13 +439,19 @@ footer {
   }
 }
 
-@media screen and (max-width: 481px) {
-  .nav > .container {
-    width: 768px;
+@media only screen and (max-width: 481px) {
+  .nav.responsive li a.btn-mini {
+    font-size: 0.3rem;
+    padding: 0 4px;
+    width: 1.5rem;
+  }
+
+  .emotion-container img {
+    width: 80%;
   }
 }
 
-@media screen and (max-width: 312px) {
+@media only screen and (max-width: 312px) {
   body {
     font-size: 0.8rem;
     display: flex;
